fixed fuxa-view as dialog, access to hmi resource from fuxa-view in panel control, daq recorder only on change (allow interval to 0), some improvement: editor scrollbar, editor confirm dialog

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -137,7 +137,13 @@ select:disabled {
 * {
     /* font-family: "Segoe UI Symbol", "Roboto-Regular", "Helvetica Neue", sans-serif; */
     text-decoration: none;
-    scrollbar-width: thin;
+    scrollbar-width: auto;
+}
+
+@-moz-document url-prefix() {
+    * {
+        scrollbar-width: thin;
+    }
 }
 
 *:focus {
